# flatflow

./: CMakeLists.txt  setup.py
examples/nemo/nlp/language_modeling/tuning/conf/: megatron_gpt_finetuning_config.yaml
experiments/: visualize_pipeline.py
flatflow/: CMakeLists.txt
flatflow/aten/native/: attention.cu
flatflow/data/: dataset_test.cc
flatflow/megatron/: __init__.py  gpt_dataset.py
flatflow/megatron/core/pipeline_parallel/: schedules.py
flatflow/nemo/: install.sh
flatflow/nemo/collections/nlp/data/language_modeling/megatron/: megatron_batch_samplers.py
flatflow/nemo/collections/nlp/models/language_modeling/: megatron_gpt_sft_model.py
flatflow/nemo/examples/nlp/language_modeling/tuning/: megatron_gpt_finetuning.py
flatflow/nemo/examples/nlp/language_modeling/tuning/conf/: megatron_gpt_finetuning_config.yaml
flatflow/nemo/nemo/collections/nlp/models/language_modeling/: megatron_gpt_sft_model.py
flatflow/nemo/nemo/collections/nlp/modules/common/megatron/: attention.py
flatflow/python/: CMakeLists.txt  communicator.cpp
flatflow/rpc/: communicator.h
flatflow/torch/profiler/: profiler.py
